syntax = "proto3";

package ng.alarms;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service AlarmsService {
  rpc GetOutdoorAlarmState(google.protobuf.Empty) returns (OutdoorAlarmState) {}
  rpc SendOutdoorAlarmCommand(OutdoorAlarmCommand) returns (OutdoorAlarmState) {
  }
}

enum TwoStates {
  NONE = 0;
  ON = 1;
  OFF = 2;
  TOGGLE = 3;
}

message OutdoorAlarmLightsCommand {
  TwoStates south_light = 1;
  TwoStates east_light = 2;
}

enum SirenAction {
  FORCE_OFF = 0;
}

message OutdoorAlarmCommand {
  oneof inner {
    OutdoorAlarmLightsCommand lights = 1;
    TwoStates outdoor_alarm_enable = 3;
    SirenAction outdoor_alarm_siren_direct_action = 4;
  }
}

message OutdoorAlarmState {
  bool enabled = 1;

  // device state
  OutdoorAlarmDeviceState device = 20;

  // config
  bool alarm_auto_enabled = 30;
  string alarm_auto_enable_time = 31;
  string alarm_auto_disable_time = 32;
  uint32 alarm_siren_minimum_interval_seconds = 33;

  bool lights_auto_enabled = 40;
  string lights_auto_enable_time = 41;
  string lights_auto_disable_time = 42;

  // stats
  uint32 south_detector_triggered_count = 50;
  uint32 east_detector_triggered_count = 51;
  uint32 sabotage_triggered_count = 52;
  uint32 signals_total_count = 53;
  google.protobuf.Timestamp last_signal = 55;
  optional uint32 last_signal_from_now_seconds = 56;

  uint32 sirens_triggered_count = 60;
  google.protobuf.Timestamp last_siren = 61;
  optional uint32 last_siren_from_now_seconds = 62;
}

message OutdoorAlarmDeviceState {
  bool south_light = 1;
  bool east_light = 2;

  bool south_detector = 3;
  bool east_detector = 4;

  bool siren_active = 5;
  bool sabotage = 6;
}