syntax = "proto3";

package ng;

import "common.proto";
import "google/protobuf/timestamp.proto";

// Broadcast ?

service ControllerService {
  rpc Query(Request) returns (Response) {}
}

message Request {
  DeviceId did = 1;
  optional uint32 timeout = 2;

  oneof query {
    Command command = 3;
    TelemetryRequest telemetry = 4;
    QueryAttribute attribute = 5;
  }
}

enum Status {
  OK = 0;
  NOK = 1;
  TIMEOUT = 2;
}

message Response {
  DeviceId did = 1;
  uint32 response_time = 2;
  Status status = 3;
  google.protobuf.Timestamp timestamp = 4;

  oneof response {
    Telemetry telemetry = 5;
    Attribute attribute = 6;
  }
}

message TelemetryRequest { Endpoint endpoint = 1; }

message Command {
  Endpoint endpoint = 1;
  repeated uint32 payload = 2 [ packed = true ];
}

message QueryAttribute {
  uint32 key = 1;
  optional uint32 value = 2;
}

message Telemetry {
  Endpoint endpoint = 1;
  repeated uint32 payload = 2 [ packed = true ];
}

message Attribute {
  uint32 key = 1;
  uint32 value = 2;
}