syntax = "proto3";

package ng.internal;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service InternalService {
  rpc Hello(HelloRequest) returns (HelloResponse) {}

  rpc GetSettings(google.protobuf.Empty) returns (Settings) {}
  rpc SetSettings(PartialSettings) returns (Settings) {}
  rpc ResetSettings(google.protobuf.Empty) returns (Settings) {}

  rpc GetSoftwareInfos(google.protobuf.Empty) returns (SoftwareInfos) {}
  rpc GetFirmwareInfos(google.protobuf.Empty) returns (FirmwareInfos) {}

  rpc GetInfos(google.protobuf.Empty) returns (Infos) {}
}

message PartialSettings {
  optional bool dark_mode = 1;
  optional bool debug_mode = 2;
}

message Settings {
  bool dark_mode = 1;
  bool debug_mode = 2;
}

message HelloRequest { string name = 1; }

message HelloResponse {
  string message = 1;
  google.protobuf.Timestamp timestamp = 2;
  map<string, uint32> map = 3;
  repeated string strings = 4;
  bytes bytes = 12;
}

message SoftwareBuildInfos {
  string version = 1;
  string commit = 2;
  google.protobuf.Timestamp build_date = 3;
}

message SoftwareInfos {
  optional SoftwareBuildInfos build = 1;
  google.protobuf.Timestamp start_date = 2;
  google.protobuf.Timestamp update_date = 3;
}

message FirmwareBuildInfos {
  string distro = 1;
  string distro_version = 2;
  optional google.protobuf.Timestamp build_date = 3;
}

message FirmwareInfos { FirmwareBuildInfos build = 1; }

message Infos {
  optional SoftwareInfos software = 1;
  optional FirmwareInfos firmware = 2;
}